Fixed: BalloonPanel position in ListeningMode on editor resize. Restricted CSS transitions to balloon collapsing process only.

--- a/skins/moono/a11ychecker.css
+++ b/skins/moono/a11ychecker.css
@@ -403,11 +403,6 @@ input.cke_a11yc_ui_input_text:focus
 	background: none;
 	border: 0;
 
-	-webkit-transition: .3s ease-in-out;
-	-moz-transition: .3s ease-in-out;
-	-o-transition: .3s ease-in-out;
-	transition: .3s ease-in-out;
-
 	-moz-border-radius: 3px 0 0 0;
 	-webkit-border-radius: 3px 0 0 0;
 	border-radius: 3px 0 0 0;
@@ -415,6 +410,14 @@ input.cke_a11yc_ui_input_text:focus
 	-moz-box-shadow: none;
 	-webkit-box-shadow: none;
 	box-shadow: none;
+}
+
+.cke_balloon.cke_a11yc_mode_listening.cke_balloon.cke_a11yc_animated
+{
+	-webkit-transition: .3s ease-in-out;
+	-moz-transition: .3s ease-in-out;
+	-o-transition: .3s ease-in-out;
+	transition: .3s ease-in-out;
 }
 
 .cke_balloon.cke_a11yc_mode_listening .cke_balloon_title,
